# m365-license-review

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  Setup-M365-Review-DockerDesktop.cmd  Setup-M365-Review-RancherDesktop.cmd  Start-M365-Review.cmd  docker-compose.yml  pyproject.toml  run.ps1  run.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
config/: sku_display_names.yaml  sku_overlaps.yaml  sku_prices.yaml
docs/: ARCHITECTURE.md  AUDIT_ROADMAP.md  AZURE_SETUP.md  GETTING_STARTED.md  PHASE2_ROADMAP.md
notebooks/: 01_auth_walkthrough.ipynb  02_fetch_and_explore.ipynb  03_rules_engine.ipynb  04_report_generation.ipynb  README.md
scripts/: update_sku_names.py
src/m365_review/: __init__.py  cli.py  settings.py
src/m365_review/core/: __init__.py  audits.py  auth.py  engine.py  graph_client.py  models.py  pricing.py  profiles.py
src/m365_review/core/fetchers/: __init__.py  organization.py  policies.py  security.py  skus.py  subscriptions.py  users.py
src/m365_review/web/: __init__.py  app.py  sessions.py
tests/: conftest.py  test_audits_catalog.py  test_expirations.py  test_graph_client.py  test_identity.py  test_posture.py  test_pricing.py  test_pricing_online.py  test_profiles.py  test_report.py  test_rules.py
tests/fixtures/: directoryRoles.json  organization.json  subscribedSkus.json  subscriptions.json  userRegistration.json  users.json
(+28 files in other folders)
