[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m365-license-review"
version = "0.2.0"
description = "Read-only Microsoft 365 license review & optimization tool for MSPs (web + CLI, containerized)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "XL.net" }]
keywords = ["microsoft365", "licensing", "msp", "graph-api", "audit"]

dependencies = [
    # Auth
    "msal>=1.28",
    # HTTP / Graph
    "httpx>=0.27",
    # Web
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",      # signed session cookies
    "sse-starlette>=2.1",     # progress streaming
    # CLI
    "typer>=0.12",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    # Reporting
    "openpyxl>=3.1",          # .xlsx
    "python-docx>=1.1",       # .docx
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",            # httpx mocking
    "jupyter>=1.0",
    "nbstripout>=0.7",        # strip notebook outputs before commit
    "ruff>=0.5",
]

[project.scripts]
m365-review = "m365_review.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/m365_review"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
